--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "puppeteer": "^21.3.8"
   },
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.0.0"
   }
 }
